--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Weather</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   </head>
   <body>
@@ -11,8 +11,8 @@
       <div class="container-fluid">
         <a class="navbar-brand">Weather</a>
         <form class="d-flex" role="search">
-          <input id="cityInput" class="form-control me-2" type="text" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
+          <input id="cityInput" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button id='search' class="btn btn-outline-success" type="submit">Search</button>
         </form>
       </div>
     </nav>
@@ -24,7 +24,7 @@
         <button type="button" class="btn btn-primary">Button</button>
         <button type="button" class="btn btn-primary">Button</button>
       </div>
-      <div class="card col-12 col-md-9">
+      <div id='currentWeather' class="card col-12 col-md-9">
         <div class="card-header">
           Today's Weather
         </div>
