--- a/index.html
+++ b/index.html
@@ -26,12 +26,13 @@
       </div>
       <div id='currentWeather' class="card col-12 col-md-9">
         <div class="card-header">
-          Today's Weather
+          <h3 id="insertCity">Today's Weather</h3>
         </div>
         <div class="card-body">
-          <h5 class="card-title">Special title treatment</h5>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <h5 id="conditions" class="card-title">sample text</h5>
+         <p id = 'todaysTemp' class='card-subtitle'>sample text</p>
+         <p id="todaysWind" class="card-subtitle">sample text</p>
+         <p id="todaysHumidity" class="card-subtitle">sample text</p>
         </div>
       </div>
     </div>
