for loop beginning to take shape, having trouble selecting each.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
     <div class="row">
 
-      <div class="card col-6 col-med-2" style="width: 18rem;">
+      <div id='7'class="card col-6 col-med-2" style="width: 18rem;">
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
           <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
@@ -48,7 +48,7 @@
         </div>
       </div>
 
-      <div class="card col-6 col-med-2" style="width: 18rem;">
+      <div id='15' class="card col-6 col-med-2" style="width: 18rem;">
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
           <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
@@ -58,7 +58,7 @@
         </div>
       </div>
 
-      <div class="card col-6 col-med-2" style="width: 18rem;">
+      <div id='23'class="card col-6 col-med-2" style="width: 18rem;">
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
           <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
@@ -68,7 +68,7 @@
         </div>
       </div>
 
-      <div class="card col-6 col-med-2 " style="width: 18rem;">
+      <div id='31' class="card col-6 col-med-2 " style="width: 18rem;">
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
           <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
@@ -78,7 +78,7 @@
         </div>
       </div>
 
-      <div class="card col-6 col-med-2" style="width: 18rem;">
+      <div id='39'class="card col-6 col-med-2" style="width: 18rem;">
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
           <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
