--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 </head>
 
-<body>
-  <nav class="navbar bg-body-tertiary">
+<body class="bg-body-secondary">
+  <nav class="navbar  bg-body-tertiary">
     <div class="container-fluid">
       <a class="navbar-brand">Weather</a>
       <form class="d-flex" role="search">
@@ -32,7 +32,7 @@
         <p id="todaysHumidity" class="card-subtitle">sample text</p>
       </div>
 
-    <div class="btn-group-vertical col-12 col-md-3 " role="group" aria-label="Vertical button group">
+    <div id='buttonDiv'class="btn-group-vertical col-12 col-md-3 " role="group" aria-label="Vertical button group">
      <!-- <button type="button" class="btn btn-primary">Button</button> -->
     
     </div>
