--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container-fluid">
       <a class="navbar-brand">Weather</a>
       <form class="d-flex" role="search">
-        <input id="cityInput" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <input id="cityInput" class="form-control me-2" type="search" placeholder="City" aria-label="City">
         <button id='search' class="btn btn-outline-success" type="submit">Search</button>
       </form>
     </div>
@@ -22,14 +22,14 @@
   <div class="row">
     <div id='currentWeather' class="card col-12 col-md-9">
       <div class="card-header">
-        <h3 id="insertCity">Today's Weather</h3>
+        <h3 id="insertCity"></h3>
       </div>
       <div class="card-body">
         <img id='icon' src="" alt="">
-        <h5 id="conditions" class="card-title">sample text</h5>
-        <p id='todaysTemp' class='card-subtitle'>sample text</p>
-        <p id="todaysWind" class="card-subtitle">sample text</p>
-        <p id="todaysHumidity" class="card-subtitle">sample text</p>
+        <h5 id="conditions" class="card-title"></h5>
+        <p id='todaysTemp' class='card-subtitle'></p>
+        <p id="todaysWind" class="card-subtitle"></p>
+        <p id="todaysHumidity" class="card-subtitle"></p>
       </div>
 
     </div>
